# steve

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  premake5.lua
cfg/: all.steve.json  base.steve.json  classical.steve.json  jazz.steve.json  sane.steve.json
src/: Chord.cpp  Chord.h  Config.cpp  Config.h  ConfigItemList.h  ConfigJson.cpp  ConfigJson.h  ConfigRangedNumber.h  Instrument.cpp  Instrument.h  ItemDescription.h  Midi.cpp  Midi.h  Midi_win.cpp  Music.cpp  Music.h  Player.cpp  Player.h  Rand.cpp  Rand.h  Scale.cpp  Scale.h  Steve.cpp  Steve.h  TimeSignature.h  creator.h  main.cpp  midi.cpp  midi.h
src/cfg/: Chord.h  ChordChange.cpp  ChordChange.h  Config.cpp  Config.h  ConfigItemList.h  ConfigJson.cpp  ConfigJson.h  ConfigRangedNumber.cpp  ConfigRangedNumber.h  CreatorDescription.h  ItemDescription.h  Scale.cpp  Scale.h  TimeSignature.h
src/creator/: Arpeggio.cpp  Arpeggio.h  Bass.cpp  Bass.h  ChordBasedCreator.cpp  ChordBasedCreator.h  Chords.cpp  Chords.h  Creator.cpp  Creator.h  Drums.cpp  Drums.h  Melody.cpp  Melody.h  Tonal.h
src/ctr/: Arpeggio.cpp  Bass.cpp  Chords.cpp  Creator.cpp  Creator.h  Drums.cpp  Melody.cpp
src/ext/: cmdline.h
src/output/: JsonOutput.cpp  MidiOutput.cpp  TextOutput.cpp  TextOutput.h
